<resources>
    <string name="app_name">Simple Journal</string>
    <string name="enter_email">Enter email</string>
    <string name="enter_password">Enter password</string>
    <string name="signup">Signup</string>
    <string name="user_registration">User Registration</string>
    <string name="user_login">User Login</string>
    <string name="login">Login</string>
    <string name="registered">Already have an account? Login here.</string>
    <string name="unregistered">Not a registered user? Sign up here.</string>
    <string name="registering">Registering Please Wait...</string>
    <string name="logout">Logout</string>
    <string name="title">Title</string>
    <string name="content">Diary content</string>
    <string name="date">Date/Time</string>
    <string name="enter_title">Enter title</string>
    <string name="enter_content">Enter content</string>
    <string name="insert">Insert New Diary Item</string>
    <string name="edit">Edit Diary Item</string>
    <string name="title_activity_view_diary_content">ViewDiaryContent</string>
</resources>
